--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 .active {
-    font-weight: 800;
+  font-weight: 800;
 }
-.active.user-nav{
-    font-weight: 500;
-    background-color: #E5E7EB;
+.active.user-nav {
+  font-weight: 500;
+  background-color: #e5e7eb;
 }
